--- a/index.html
+++ b/index.html
@@ -3,24 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main page</title>
+    <title>Panagiotis Fasoulidis - Visualization</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <nav>
-    <ul>
-        <li><a href="index.html">Main page</a></li>
-        <li><a href="aboutme.html">About me</a></li>
-        <li><a href="visualization.html">Data-driven Visualization Image</a></li>
-        <li><a href="svg.html">SVG</a></li>
-        <li><a href="credit.html">Sources</a></li>
-    </ul>
-</nav>
+    <div class="content">
+        <div>
+            <h1>Welcome to Panagiotis Fasoulidis' Visualization</h1>
+            <p>Here, you will find information about me, a beautiful data visualization, and an interactive SVG animation. Feel free to navigate through my page.</p>
+            
+        </div>
+    </div>
 
-<h1>Welcome to my website</h1>
-<p>Here, you will find information about me, a beautiful data visualization, and an interactive SVG animation. Feel free to navigate through my page.</p>
-
+    <script src="script.js"></script>
 <img src="me.jpg" alt="My photo" width="130px">
 
 </body>
