--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panagiotis Fasoulidis - Visualization</title>
+    <title>Main page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div class="content">
-        <div>
-            <h1>Welcome to Panagiotis Fasoulidis' Visualization</h1>
-            <p>Here, you will find information about me, a beautiful data visualization, and an interactive SVG animation. Feel free to navigate through my page.</p>
-            
-        </div>
-    </div>
+  <nav>
+    <ul>
+        <li><a href="index.html">Main page</a></li>
+        <li><a href="visualization.html">Data-driven Visualization Image</a></li>
+        <li><a href="svg.html">SVG</a></li>
+        <li><a href="credit.html">Sources</a></li>
+    </ul>
+</nav>
 
-    <script src="script.js"></script>
+<h1>Welcome to my website</h1>
+<p>Here, you will find information about me, a beautiful data visualization, and an interactive SVG animation. Feel free to navigate through my page.</p>
+
+<h1>About me</h1>
+<p>Hello! My name is Panagiotis Fasoulidis, and I am passionate about languages, technology, and the intersection of the two...</p>
+
 <img src="me.jpg" alt="My photo" width="130px">
 
 </body>
