--- a/visualization.html
+++ b/visualization.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data (Information) Visualization Image</title>
+    <title>Data Visualization</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <nav>
-    <ul>
-        <li><a href="index.html">Main page</a></li>
-        <li><a href="aboutme.html">About me</a></li>
-        <li><a href="visualization.html">Data-driven Visualization Image</a></li>
-        <li><a href="svg.html">SVG</a></li>
-        <li><a href="credit.html">Sources</a></li>
-    </ul>
-</nav>
+        <ul>
+            <li><a href="index.html">Main page</a></li>
+            <li><a href="visualization.html">Data-driven Visualization Image</a></li>
+            <li><a href="svg.html">SVG</a></li>
+            <li><a href="credit.html">Sources</a></li>
+        </ul>
+    </nav>
 
-    <h1>An interesting visualization</h1>
+    <h1>Data Visualization</h1>
     <img src="chart1.png" alt="chart" width="800px">
     <p>This visualization appeals to me because it clearly presents the data comparison.</p>
 
