--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main page</title>
+    <title>Movie Visualization</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
+
 <body>
 
-  <nav>
-    <ul>
-        <li><a href="index.html">Main page</a></li>
-        <li><a href="visualization.html">Data-driven Visualization Image</a></li>
-        <li><a href="svg.html">SVG</a></li>
-        <li><a href="credit.html">Sources</a></li>
-    </ul>
-</nav>
+    <nav>
+        <a href="intro.html">Intro</a>
+        <a href="chart.html">Visualization</a>
+        <a href="about.html">About Me</a>
+        <a href="credits.html">Credits</a>
+    </nav>
 
-<h1>Welcome to my website</h1>
-<p>Here, you will find information about me, a beautiful data visualization, and an interactive SVG animation. Feel free to navigate through my page.</p>
+    <div class="content">
+        <h1>Welcome to Movie Visualization</h1>
+        <p>Click on the menu to navigate through the sections.</p>
+    </div>
 
-<h1>About me</h1>
-<p>Hello! My name is Panagiotis Fasoulidis, and I am passionate about languages, technology, and the intersection of the two...</p>
+</body>
+
+</html>
 
 <img src="me.jpg" alt="My photo" width="130px">
 
