--- a/credit.html
+++ b/credit.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html lang="el">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Πηγές</title>
+    <title>Credits</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <nav>
-        <ul>
-            <li><a href="index.html">Main page</a></li>
-            <li><a href="aboutme.html">About me</a></li>
-            <li><a href="visualization.html">Data-driven Visualization Image</a></li>
-            <li><a href="svg.html">SVG</a></li>
-            <li><a href="credit.html">Sources</a></li>
-        </ul>
+        <a href="index.html">Home</a>
+        <a href="intro.html">Intro</a>
+        <a href="chart.html">Visualization</a>
+        <a href="about.html">About Me</a>
     </nav>
 
-    <h1>Sources</h1>
-    <p>jQuery License: MIT</p>
-    <p>SVG animations based on Mozilla Developer Network examples</p>
+    <div class="content">
+        <h1>Credits</h1>
+        <p>Panagiotis Fasoulidis</p>
+        <p>Special thanks to:</p>
+        <ul>
+            <li><a href="https://github.com/">GitHub</a></li>
+            <li><a href="https://youtube.com/">YouTube</a></li>
+        </ul>
+    </div>
 
 </body>
+
 </html>
