--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </nav>
 
     <div class="content">
-        <h1>Welcome to Movie Visualization</h1>
-        <p>Click on the menu to navigate through the sections.</p>
+        <h1>Welcome to my website</h1>
+        <p>Here, you will find information about me, a beautiful data visualization, and an interactive SVG animation. Feel free to navigate through my page.</p>
     </div>
 
 </body>
