--- a/aboutme.html
+++ b/aboutme.html
@@ -21,9 +21,10 @@
     <div class="content">
         <h1>About Me</h1>
         <h1>About me</h1>
-<p>Hello! My name is Panagiotis Fasoulidis, and I am passionate about languages, technology, and the intersection of the two. I hold a degree in Philology from the Aristotle University of Thessaloniki, where I also completed my Master’s in Applied Linguistics. Currently, I am pursuing a second Master’s degree in Language Technology, a program focused on Natural Language Processing (NLP) and Artificial Intelligence (AI). This exciting field allows me to explore cutting-edge topics like Generative AI (GenAI), AI Ethics, , which I find deeply fascinating. I am fluent in four languages—Modern Greek, English, Russian, and Spanish (all at C2 level) and I am also proficient in Swedish at a B2 level. My multilingual background has not only enriched my personal and professional life but also deepened my understanding of linguistic structures and cultural nuances. Professionally, I work as a Language Project Manager at Welocalize, a multinational company. In this role, I am constantly engaged with data visualization and information visualization, using these tools to analyze and create weekly KPIs that measure the quality of our projects and workflows. This experience has further fueled my interest in data-driven decision-making and the role of AI in optimizing processes. Outside of work and studies, I enjoy staying active through swimming and basketball, and I am an avid cinema enthusiast. I believe that storytelling—whether through films, literature, or even data—has the power to connect people and ideas in meaningful ways.</p>
-
-<img src="me.jpg" alt="My photo" width="130px">
+<p>Hello! My name is Panagiotis Fasoulidis, and I am passionate about languages, technology, and the intersection of the two. 
+    I hold a degree in Philology from the Aristotle University of Thessaloniki, where I also completed my Master’s in Applied Linguistics. Currently, I am pursuing a second Master’s degree in Language Technology, a program focused on Natural Language Processing (NLP) and Artificial Intelligence (AI). 
+    I am fluent in four languages—Modern Greek, English, Russian, and Spanish (all at C2 level) and I am also advanced user of Swedish at a B2 level. My multilingual background has not only enriched my personal and professional life but also deepened my understanding of linguistic structures and cultural nuances. 
+    Professionally, I work as a Language Project Manager at Welocalize, a multinational company.  Outside of work and studies, I enjoy staying active through swimming and basketball, and I am an avid cinema enthusiast.</p>
 
 </body>
 </html>
