--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <nav>
         <a href="intro.html">Intro</a>
-        <a href="chart.html">Visualization</a>
-        <a href="about.html">About Me</a>
-        <a href="credits.html">Credits</a>
+        <a href="chart1.html">Visualization</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="credit.html">Credits</a>
     </nav>
 
     <div class="content">
