--- a/credit.html
+++ b/credit.html
@@ -13,8 +13,8 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="intro.html">Intro</a>
-        <a href="chart.html">Visualization</a>
-        <a href="about.html">About Me</a>
+        <a href="chart1.html">Visualization</a>
+        <a href="aboutme.html">About Me</a>
     </nav>
 
     <div class="content">
