--- a/aboutme.html
+++ b/aboutme.html
@@ -14,8 +14,8 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="intro.html">Intro</a>
-        <a href="chart.html">Visualization</a>
-        <a href="credits.html">Credits</a>
+        <a href="chart1.html">Visualization</a>
+        <a href="credit.html">Credits</a>
     </nav>
 
     <div class="content">
