--- a/visualization.html
+++ b/visualization.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Visualization</title>
+    <title>SVG Visualization</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
+
 <body>
 
     <nav>
-        <ul>
-            <li><a href="index.html">Main page</a></li>
-            <li><a href="visualization.html">Data-driven Visualization Image</a></li>
-            <li><a href="svg.html">SVG</a></li>
-            <li><a href="credit.html">Sources</a></li>
-        </ul>
+        <a href="index.html">Home</a>
+        <a href="visualization.html">Visualization</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="credits.html">Credits</a>
     </nav>
 
-    <h1>Data Visualization</h1>
-    <img src="chart1.png" alt="chart" width="800px">
-    <p>This visualization appeals to me because it clearly presents the data comparison.</p>
+    <div class="content">
+        <h1>SVG Data Visualization</h1>
+
+        <svg id="animation-svg" width="500" height="500">
+            <circle cx="100" cy="100" r="40" fill="blue">
+                <animate attributeName="cx" from="100" to="400" dur="4s" repeatCount="indefinite" />
+            </circle>
+            <rect x="150" y="150" width="80" height="80" fill="green">
+                <animate attributeName="y" from="150" to="400" dur="5s" repeatCount="indefinite" />
+            </rect>
+            <polygon points="250,50 300,150 350,50" fill="red">
+                <animate attributeName="points" from="250,50 300,150 350,50" to="300,50 350,150 400,50" dur="3s" repeatCount="indefinite" />
+            </polygon>
+        </svg>
+
+        <p>Click on a shape to perform an action like freezing it or disappearing it.</p>
+    </div>
 
 </body>
+
 </html>
