--- a/visualization.html
+++ b/visualization.html
@@ -15,7 +15,7 @@
         <a href="index.html">Home</a>
         <a href="visualization.html">Visualization</a>
         <a href="aboutme.html">About Me</a>
-        <a href="credits.html">Credits</a>
+        <a href="credit.html">Credits</a>
     </nav>
 
     <div class="content">
