--- a/credit.html
+++ b/credit.html
@@ -12,19 +12,22 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="intro.html">Intro</a>
-        <a href="chart1.html">Visualization</a>
+        <a href="visualization.html">Visualization</a>
         <a href="aboutme.html">About Me</a>
+        <a href="credit.html">Credits</a>
     </nav>
-
-    <div class="content">
+    
+<div class="content">
         <h1>Credits</h1>
-        <p>Panagiotis Fasoulidis</p>
-        <p>Special thanks to:</p>
+
+        <p>This website uses the following resources:</p>
         <ul>
-            <li><a href="https://github.com/">GitHub</a></li>
-            <li><a href="https://youtube.com/">YouTube</a></li>
+            <li>jQuery (MIT License) - <a href="https://jquery.com">https://jquery.com</a></li>
+            <li>SVG animations - Created by [Your Name]</li>
+            <li>Data Visualization - Image sourced from [source name]</li>
         </ul>
+
+        <p>Special thanks to [other contributors or tools you used].</p>
     </div>
 
 </body>
