--- a/aboutme.html
+++ b/aboutme.html
@@ -13,18 +13,13 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="intro.html">Intro</a>
-        <a href="chart1.html">Visualization</a>
-        <a href="credit.html">Credits</a>
+        <a href="visualization.html">Visualization</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="credits.html">Credits</a>
     </nav>
 
     <div class="content">
         <h1>About Me</h1>
-        <h1>About me</h1>
-<p>Hello! My name is Panagiotis Fasoulidis, and I am passionate about languages, technology, and the intersection of the two. 
-    I hold a degree in Philology from the Aristotle University of Thessaloniki, where I also completed my Master’s in Applied Linguistics. Currently, I am pursuing a second Master’s degree in Language Technology, a program focused on Natural Language Processing (NLP) and Artificial Intelligence (AI). 
-    I am fluent in four languages—Modern Greek, English, Russian, and Spanish (all at C2 level) and I am also advanced user of Swedish at a B2 level. My multilingual background has not only enriched my personal and professional life but also deepened my understanding of linguistic structures and cultural nuances. 
-    Professionally, I work as a Language Project Manager at Welocalize, a multinational company.  Outside of work and studies, I enjoy staying active through swimming and basketball, and I am an avid cinema enthusiast.</p>
 
-</body>
-</html>
+        <img src="me.jpg" alt="My photo" width="150px">
+    <p>Hello! My name is Panagiotis Fasoulidis, and I am passionate about languages, technology, and the intersection of the two. I hold a degree in Philology from the Aristotle University of Thessaloniki, where I also completed my Master’s in Applied Linguistics. Currently, I am pursuing a second Master’s degree in Language Technology, a program focused on Natural Language Processing (NLP) and Artificial Intelligence (AI). I am fluent in four languages—Modern Greek, English, Russian, and Spanish (all at C2 level) and I am also proficient in Swedish at a B2 level. My multilingual background has not only enriched my personal and professional life but also deepened my understanding of linguistic structures and cultural nuances. Professionally, I work as a Language Project Manager at Welocalize, a multinational company. Outside of work and studies, I enjoy staying active through swimming and basketball, and I am an avid cinema enthusiast. </p>
