--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
         <a href="credit.html">Credits</a>
     </nav>
 
-    div class="about-container">
+    <div class="about-container">
         <h1>About Me</h1>
 
         <img src="me.jpg" alt="My photo" width="150px">
