--- a/visualization.html
+++ b/visualization.html
@@ -4,36 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVG Visualization</title>
+    <title>Data Visualization</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 
 <body>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="visualization.html">Visualization</a>
-        <a href="aboutme.html">About Me</a>
-        <a href="credit.html">Credits</a>
-    </nav>
-
     <div class="content">
-        <h1>SVG Data Visualization</h1>
+        <h1>Data Visualization</h1>
 
-        <svg id="animation-svg" width="500" height="500">
-            <circle cx="100" cy="100" r="40" fill="blue">
-                <animate attributeName="cx" from="100" to="400" dur="4s" repeatCount="indefinite" />
-            </circle>
-            <rect x="150" y="150" width="80" height="80" fill="green">
-                <animate attributeName="y" from="150" to="400" dur="5s" repeatCount="indefinite" />
-            </rect>
-            <polygon points="250,50 300,150 350,50" fill="red">
-                <animate attributeName="points" from="250,50 300,150 350,50" to="300,50 350,150 400,50" dur="3s" repeatCount="indefinite" />
-            </polygon>
-        </svg>
+        <!-- Displaying the chart image -->
+        <img src="chart1.PNG" alt="Data Chart" width="500">
 
-        <p>Click on a shape to perform an action like freezing it or disappearing it.</p>
+        <!-- Description about the chart -->
+        <p>This is a data visualization that I find fascinating because it represents complex information in a simple, easy-to-understand way. The use of colors, shapes, and patterns makes the data more accessible and engaging.</p>
     </div>
 
 </body>
