--- a/visualization.html
+++ b/visualization.html
@@ -11,6 +11,13 @@
 
 <body>
 
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="visualization.html">Visualization</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="credit.html">Credits</a>
+    </nav>
+
     <div class="content">
         <h1>Data Visualization</h1>
 
@@ -22,5 +29,4 @@
     </div>
 
 </body>
-
 </html>
