--- a/visualization.html
+++ b/visualization.html
@@ -18,13 +18,9 @@
         <a href="credit.html">Credits</a>
     </nav>
 
-    <div class="content">
-        <h1>Data Visualization</h1>
-
-        <!-- Displaying the chart image -->
+        <div class="image-text-container">
         <img src="chart2.PNG" alt="Data Chart" width="700">
 
-        <!-- Description about the chart -->
         <p>This is a data visualization that I find fascinating because it represents complex information in a simple, easy-to-understand way. The use of colors, shapes, and patterns makes the data more accessible and engaging.</p>
     </div>
 
