--- a/aboutme.html
+++ b/aboutme.html
@@ -23,7 +23,7 @@
         <img src="me.jpg" alt="My photo" width="150px">
         
         <a href="https://www.linkedin.com/in/panagiotis-fasoulidis/" target="_blank">
-                <img src="icons8-linkedin.gif" alt="LinkedIn Profile" class="linkedin-icon">
+                <img src="icons8-linkedin-48.png" alt="LinkedIn Profile" class="linkedin-icon">
             </a>
         </div>
     <p>Hello! My name is Panagiotis Fasoulidis, and I am passionate about languages, technology, and the intersection of the two. I hold a degree in Philology from the Aristotle University of Thessaloniki, where I also completed my Master’s in Applied Linguistics. 
