--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
     <div class="about-container">
         <h1>About Me</h1>
         <div class="image-text-container">
-            <img src="me.jpg" alt="My photo">
+            <img src="me.jpg" alt="My photo" style="width: 200px; height: 200px; border-radius: 50%;">
             <p>
                 Hello! My name is Panagiotis Fasoulidis, and I am passionate about languages, technology, and the intersection of the two. I hold a degree in Philology from the Aristotle University of Thessaloniki, where I also completed my Master’s in Applied Linguistics. 
         Currently, I am pursuing a second Master’s degree in <a href="https://www.di.uoa.gr/lt" target="_blank">Language Technology</a>, a program focused on Natural Language Processing (NLP) and Artificial Intelligence (AI) at the Department of Informatics and Telecommunications (NKUA). I am fluent in Modern Greek, English, Russian, and Spanish and I am also advanced user of Swedish. 
