--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
             <p>
                 Hello! My name is Panagiotis Fasoulidis, and I am passionate about languages, technology, and the intersection of the two. I hold a degree in Philology from the Aristotle University of Thessaloniki, where I also completed my Master’s in Applied Linguistics. 
         Currently, I am pursuing a second Master’s degree in <a href="https://www.di.uoa.gr/lt" target="_blank">Language Technology</a>, a program focused on Natural Language Processing (NLP) and Artificial Intelligence (AI) at the Department of Informatics and Telecommunications (NKUA). I am fluent in Modern Greek, English, Russian, and Spanish and I am also advanced user of Swedish. 
-        My multilingual background has not only enriched my personal and professional life but also deepened my understanding of linguistic structures and cultural nuances. Professionally, I work as a Language Project Manager at Welocalize, a multinational company. 
+        Professionally, I work as a Language Project Manager at Welocalize, a multinational company. 
         Outside of work and studies, I enjoy staying active through swimming and basketball, and I am an avid cinema enthusiast.
             </p>
 </body>
