--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My Visualization</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+
+    <link rel="icon" href="favicon-.ico" href="/images/favicon.ico">
 </head>
 
 <body>
