--- a/visualization.html
+++ b/visualization.html
@@ -26,8 +26,7 @@
             Eurostat, as well as any other EU institutions have widely used this kind of data visualization to aid the easy analysis and presentation of statistical information. 
             I selected this map because internet access is a fundamental building block in digital inclusion and socio-economic development. There is uneven connectivity in Europe: while some regions are well connected, others, especially in Southeastern Europe and some rural areas, lag behind. 
             For example, certain areas of Greece have lower internet access rates, a reflection of the persistent digital divide between urban and rural areas. Great potential exists to make a significant difference through the expansion of internet infrastructure and wider access, bringing opportunities for such activities as education, remote work, and access to basic online services. 
-            Moreover, the information is very relevant, as it may give policymakers the insight to reduce digital inequality and inspire connectivity to the more deprived areas. I like this map for its clear visual representation of digital access inequalities, making the complex information easy to interpret.
-            The stark differences between highly connected and poorly connected areas point to regions therein, where digital inclusion is to be emphasized. </p>
+            Moreover, the information is very relevant, as it may give policymakers the insight to reduce digital inequality and inspire connectivity to the more deprived areas. I like this map for its clear visual representation of digital access inequalities, making the complex information easy to interpret. </p>
     </div>
 
 </body>
