--- a/visualization.html
+++ b/visualization.html
@@ -20,7 +20,7 @@
 
     <div class="image-text-container">
         <img src="chart2.PNG" alt="Data Chart" width="700">
-        <h1 class="animated-title">Choropleth Map</h1>
+    <h1>Choropleth map</h1>
         <p>This class of maps is so-called choropleth maps, with color gradations representing statistical values across geographic sections. It illustrates the percentage of households with internet access at home in 2023 of European regions. 
             Dark blue displays the regions with the highest access rates and shifts through various shades of blue toward yellow showing regions with the lowest access rate, thereby representing regional disparities effectively. 
             Eurostat, as well as any other EU institutions have widely used this kind of data visualization to aid the easy analysis and presentation of statistical information. 
