--- a/credit.html
+++ b/credit.html
@@ -17,17 +17,19 @@
         <a href="credit.html">Credits</a>
     </nav>
     
-<div class="content">
+    <div class="content">
         <h1>Credits</h1>
 
-        <p>This website uses the following resources:</p>
+        <p>This website was created with the help of the following resources:</p>
         <ul>
-            <li>jQuery (MIT License) - <a href="https://jquery.com">https://jquery.com</a></li>
-            <li>SVG animations - Created by [Your Name]</li>
-            <li>Data Visualization - Image sourced from [source name]</li>
+            <li><strong>jQuery</strong> - <a href="https://jquery.com">https://jquery.com</a> (License: MIT and jQuery License)
+            <li><strong>W3Schools</strong> - <a href="https://www.w3schools.com">https://www.w3schools.com</a></li>
+            <li><strong>GitHub</strong> - For web hosting and version control, [GitHub](https://github.com)</li>
+            <li><strong>Data Visualization Image</strong> sourced from: <a href="https://ec.europa.eu/eurostat/documents/15234730/20025493/KS-HA-24-001-EN-N.pdf/3e624347-af98-3f3e-3a34-d24ae81cb753?version=3.0&t=1727772526684">Eurostat Regional Yearbook 2024 - Page 88</a>, Digital Society Section</li>
         </ul>
 
-        <p>Special thanks to [other contributors or tools you used].</p>
+        <p>You can find the source code for my website, including CSS, JavaScript, images, and more, on my GitHub repository: <a href="https://github.com/panafaso/panafaso.github.io" target="_blank">GitHub Repository</a></p>
+
     </div>
 
 </body>
