--- a/credit.html
+++ b/credit.html
@@ -24,7 +24,7 @@
         <ul>
             <li><strong>jQuery</strong> - <a href="https://jquery.com">https://jquery.com</a> (License: MIT and jQuery License)
             <li><strong>W3Schools</strong> - <a href="https://www.w3schools.com">https://www.w3schools.com</a></li>
-            <li><strong>GitHub</strong> - For web hosting and version control, [GitHub](https://github.com)</li>
+            <li><strong>GitHub</strong> - For web hosting and version control</li>
             <li><strong>Data Visualization Image</strong> sourced from: <a href="https://ec.europa.eu/eurostat/documents/15234730/20025493/KS-HA-24-001-EN-N.pdf/3e624347-af98-3f3e-3a34-d24ae81cb753?version=3.0&t=1727772526684">Eurostat Regional Yearbook 2024 - Page 88</a>, Digital Society Section</li>
         </ul>
 
