--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 </head>
 
 <body>
-
+    
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="visualization.html">Visualization</a>
+        <a href="aboutme.html">About Me</a>
+        <a href="credit.html">Credits</a>
+    </nav>
+    
 <div class="content">
         <h1>Welcome to my website</h1>
         <p>Here, you will find information about me, a beautiful data visualization, and an interactive SVG animation. Feel free to navigate through my page.</p>
