--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!-- SVG Animation -->
 <svg id="animation-svg" width="600" height="400">
-    <!-- Dark Gray Square (Welcome) -->
+    <!-- Dark Gray Square (Freeze on Click) -->
     <g id="square-group-1">
         <rect id="square-1" x="50" y="50" width="120" height="120" fill="darkgray"></rect>
         <text x="80" y="120" font-size="20" fill="white">Welcome</text>
@@ -42,7 +42,7 @@
             values="0,0; 0,20; 0,0" dur="0.5s" repeatCount="indefinite"/>
     </g>
 
-    <!-- Red Circle (to) -->
+    <!-- Red Circle (Always Jumping) -->
     <g id="circle-group">
         <circle id="circle" cx="250" cy="110" r="60" fill="red"></circle>
         <text x="235" y="115" font-size="22" fill="white">to</text>
@@ -50,7 +50,7 @@
             values="0,0; 0,-20; 0,0" dur="0.5s" repeatCount="indefinite"/>
     </g>
 
-    <!-- Dark Gray Square (my website) -->
+    <!-- Dark Gray Square (Disappear on Click) -->
     <g id="square-group-2">
         <rect id="square-2" x="400" y="50" width="140" height="140" fill="darkgray"></rect>
         <text x="420" y="120" font-size="18" fill="white">my website</text>
