--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
 
         <section class="svg-animation">
             <h2>Data Visualization</h2>
-            <p>Визуализация данных (Russian)</p>
-            <p>Data Visualisation (English)</p>
-            <p>Οπτικοποίηση Δεδομένων (Greek)</p> 
-            <p>Datavisualisering (Swedish)</p> 
-            <p>Visualización de datos (Spanish)</p> 
+            <p>Визуализация данных (Russian) - Οπτικοποίηση Δεδομένων (Greek) - Datavisualisering (Swedish) - Visualización de datos (Spanish)</p> 
 
 <!-- SVG Animation -->
 <svg id="animation-svg" width="600" height="400">
